<resources>
    <string name="app_name">BWay</string>
    <string name="app_description">Sistema de localización en interiores para aeropuertos.</string>
    <string name="app_title">BWay - Sistema de localización en interiores para aeropuertos</string>
    <string name="signin_registrar_usuario">Registrar</string>
    <string name="signin_nombre">Nombre</string>
    <string name="signin_email">Email</string>
    <string name="signin_contraseña">Contraseña</string>
    <string name="signin_confirmar_contraseña">Confirmar Contraseña</string>
    <string name="main_registrarme">Registrarme</string>
    <string name="main_login">Login</string>
    <string name="main_userSupport">User Support</string>
    <string name="usersupport_nro_vuelo">Número de vuelo</string>
    <string name="usersupport_buscar">Buscar</string>
    <string name="usersupport_estado_de_vuelo">Estado de vuelo</string>
    <string name="home_vuelo">VUELO</string>
    <string name="home_mapa">MAPA</string>
    <string name="home_bienvenida">Bienvenido!!!</string>
    <string name="home_masinfo">+ info</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="info">info</string>
    <string name="mapa_ubicacion">ubicación</string>
    <string name="destino">destino</string>
    <string name="cargar_vuelo_tit">Introduzca N° Vuelo :</string>
    <string name="cargarvuelo_guardar">GUARDAR</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="appbar_scrolling_view_behavior">CONFIRMAR</string>
    <string name="login_registrarme">Registrarme</string>
    <string name="usersupport_numero">Número</string>
    <string name="usersupport_destino">Destino</string>
    <string name="usersupport_fechaEmbarque">Fecha de embarque</string>
    <string name="usersupport_puertaEmbarque">Puerta de embarque</string>
    <string name="bway">BWay</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tengo_usuario_registrarme">No tengo usuario, registrarme.</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="notification_btn">notification_btn</string>
    <string name="vuelo_btn">vuelo_btn</string>
    <string name="titulo">Configuración de notificaciones</string>
    <string name="pushnotification">PushNotification</string>
    <string name="aqui_agregar_info_relacionada_a_pushnotification">Aqui agregar info relacionada a PushNotification.</string>
    <string name="aqui_agregar_info_relacionada_a_ayuda_info_del_proyecto_preguntas_frecuentes_y_cualquier_otra_referencia">Aqui agregar info relacionada a ayuda. Info del proyecto. Preguntas frecuentes y cualquier otra referencia.</string>
    <string name="moreinfo">moreInfo</string>
    <!-- New Map -->
    <string name="imageDesc">Tamaño Original</string>
    <string name="to">to</string>
    <string name="buscarcamino">Buscar camino</string>
    <string name="from">from</string>
    <string name="comidas_rapidas">Comidas rápidas</string>
    <string name="indumentaria_deportiva">Indumentaria Deportiva</string>
    <string name="cafe">Café</string>
</resources>
