<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aeropuertopng10"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="afinal.proyecto.cuatro.grupo.airportsindoorlocationapp.MainActivity">

    <TextView
        android:id="@+id/home_bienvenida_tvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/home_bienvenida"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_vuelo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_vuelo" />

        <Button
            android:id="@+id/home_mapa_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_mapa" />

        <TextView
            android:id="@+id/home_info_tvw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_masinfo" />

    </LinearLayout>

</LinearLayout>
