<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:weightSum="6">

    <Spinner
        android:id="@+id/usersupport_vuelos_sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:spinnerMode="dropdown"
        android:layout_weight="1"
        android:ellipsize="marquee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- Numero -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usersupport_numero"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/usersupport_result_numero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- DESTINO -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usersupport_destino"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/usersupport_result_destino"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- FECHA DE EMBARQUE -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usersupport_fechaEmbarque"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/usersupport_result_fechaEmbarque"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- PUERTA DE EMBARQUE -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usersupport_puertaEmbarque"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/usersupport_result_puertaEmbarque"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- ESTADO DE VUELO -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usersupport_estado_de_vuelo"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/usersupport_result_estado_de_vuelo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>
